# cdmx-mobility

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CLAUDE.md  Dockerfile  Dockerfile.md  Makefile  Makefile.md  README.md  docs-index.md  high-readme.md  main.md  main.py  pre-commit-config.md  pyproject.md  pyproject.toml  sqlfluff.md
.github/workflows/: ci.md  ci.yml  dbt-docs.yml
api/: Dockerfile  main.py
api/routers/: equity.py  modal.py  pipeline.py  pulse.py  station.py
dashboard/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/public/: alcaldias.geojson
dbt-docs/: catalog.json  partial_parse.msgpack
dbt_bigquery/: costs.md  dbt_project.md  dbt_project.yml  profiles.yml
dbt_bigquery/analyses/: bqml_ecobici_demand_forecast.sql  spatial_proximity_ecobici_near_metro.sql
dbt_bigquery/models/: exposures.yml
dbt_bigquery/seeds/: metro_station_locations.csv  mexican_holidays.csv  schema.yml  weather_conditions.csv
dbt_bigquery/snapshots/: ecobici_station_snapshot.sql
dbt_bigquery/tests/: availability_ratio_bounded.sql  headway_not_negative.sql  no_stockout_over_60min.sql  weather_comfort_score_range.sql
docs/: cost-estimates.md  key-decisions.md  runbook.md
docs/adr/: 002-spark-for-bronze-to-silver.md
infra/: .terraform.lock.hcl  backend.md  backend.tf  main.md  main.tf  outputs.md  outputs.tf  providers.md  terraform.tvars.example  tfplan  variables.md  variables.tf
ingestion/: bq_logger.md  bq_logger.py  ckan_client.md  ckan_client.py  config.md  config.py  gbfs_client.md  gbfs_client.py  gcs_uploader.md  gcs_uploader.py  schema_validator.md  schema_validator.py
ingestion/ecobici/: gbfs.md  gbfs.py
ingestion/metro/: affluence.md  affluence.py
ingestion/metrobus/: gtfs_email.py  gtfs_rt.md  gtfs_rt.py  gtfs_static.md  gtfs_static.py  inbound_webhook.py
ingestion/weather/: openmeteo.py
orchestration/: Dockerfile.airflow  bootstrap_connections.sh  docker-compose.yml
orchestration/airflow/: requirements.txt
protofiles/: Metrobus_GTFS_RT.proto
spark_jobs/: bronze_to_silver_ecobici.py  bronze_to_silver_metro_affluence.py  bronze_to_silver_metrobus_vehicles.py  bronze_to_silver_weather.py
spark_jobs/conformance/: h3_utils.py  spark_session.py  station_names.py  time_utils.py
tests/spark/: conftest.py  (+7 more)
(+112 files in other folders)
