[project]
name = "cdmx-mobility"
version = "0.1.0"
description = "Mexico City Mobility Intelligence Platform"
requires-python = "==3.11.9"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-secret-manager>=2.20.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "sqlfluff>=3.1.0",
    "pre-commit>=3.8.0",
]
spark = [
    "pyspark==3.5.2",
    "chispa>=0.10.1",
    "delta-spark>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=ingestion --cov=spark_jobs"