[project]
name = "cdmx-mobility"
version = "0.1.0"
description = "Mexico City Mobility Intelligence Platform"
requires-python = "==3.11.9"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-secret-manager>=2.20.0",
    "structlog>=24.4.0",
    "dbt-bigquery>=1.11.1",
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=4.21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "sqlfluff>=3.1.0",
    "pre-commit>=3.8.0",
]
spark = [
    "pyspark==3.5.2",
    "chispa>=0.10.1",
    "delta-spark>=3.2.0",
    "h3==3.7.7",
]
gx = [
    "great-expectations==1.3.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=ingestion --cov=spark_jobs"
